feat(project) : 完成project前端代码
Description:
  完成project前端代码
  修复了不显示分页栏的问题
  修复了多条件查询问题

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,5 +11,12 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      window.__Konph = {
+        'chivy-level': 'info',
+        'chivy-modules': ['**'], // 这样配置会打开所有module
+        'chivy-context-flags': ['color', 'level', 'module']
+      }
+    </script>
   </body>
 </html>
